# algebra

./: .gitignore  Grouplike.hs  Grouplike_old.hs  Helper.hs  LICENSE.md  OrderedAlgebra.hs  README.md  Relation.hs  Ringlike.hs  Ringlike_old.hs  Templates.hs  algebrastruct.cabal
Functions/: Groups.hs  Monoids.hs
Grouplike/: Internal.hs  Traits.hs
Relation/: Internal.hs  Relations.hs  Traits.hs
Ringlike/: Internal.hs  Traits.hs
